--- a/iniciarSesion.html
+++ b/iniciarSesion.html
@@ -35,7 +35,7 @@
   </div>
   
 
-    <a href="#" class="forgot-password">¿Olvidaste tu contraseña?</a>
+    <a href="olvidarContrasena.html" class="forgot-password">¿Olvidaste tu contraseña?</a>
     
     <button class="btn-login" onclick="iniciarSesion()">Iniciar sesión</button>
 
