feat: olvidar contraseña - listo

--- a/iniciarSesion.html
+++ b/iniciarSesion.html
@@ -6,6 +6,8 @@
   <title>Iniciar Sesión</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <link rel="stylesheet" href="css/iniciarSesion.css">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+
 </head>
 <body>
 
@@ -15,7 +17,7 @@
       <h1>Iniciar sesión</h1>
     </div>
     <hr>
-    <i class="fas fa-user-circle logo"></i>
+    <i class="fa-regular fa-circle-user logo"></i>
     <p class="subtitle">¡Bienvenido a Fitness Fusion!</p>
     <p>Ingresa tu correo y contraseña para iniciar sesión</p>
 
@@ -37,7 +39,7 @@
 
     <a href="olvidarContrasena.html" class="forgot-password">¿Olvidaste tu contraseña?</a>
     
-    <button class="btn-login" onclick="iniciarSesion()">Iniciar sesión</button>
+    <button class="btn-login" onclick="iniciarSesion()"><i class="fa-solid fa-right-to-bracket"></i> Iniciar sesión</button>
 
     <div class="redes">
       <button class="fb redes-btn" onclick="window.location.href='https://www.facebook.com/?locale=es_LA'" title="Continuar con Facebook">
