--- a/olvidarContrasena.html
+++ b/olvidarContrasena.html
@@ -22,7 +22,7 @@
                 <label for="correo">Correo*</label>
                 <span class="error-message" id="error-correo"></span>
             </div>
-            <button class="btn-register" onclick="buscarCuenta()">Buscar cuenta</button>
+            <button class="btn-register" onclick="buscarCuenta()"><i class="fa-solid fa-magnifying-glass"></i> Buscar cuenta</button>
             <p class="existing-user"><a href="iniciarSesion.html">Iniciar sesión</a></p>
         </div>
     </div>
