--- a/registrarse.html
+++ b/registrarse.html
@@ -15,7 +15,7 @@
             <h1>Crear cuenta</h1>
         </div>
         <hr>
-        <i class="fas fa-user-circle logo"></i>
+        <i class="fa-regular fa-circle-user logo"></i>
         <p class="subtitle">¿Eres nuevo en Fitness Fusion?</p>
         <p>Regístrate y disfruta de nuestros beneficios y una experiencia de compra más rápida y sencilla.</p>
 
@@ -59,7 +59,7 @@
         </div>
         
 
-        <button class="btn-register" onclick="registrar()">Crear cuenta</button>
+        <button class="btn-register" onclick="registrar()"><i class="fa-solid fa-plus"></i> Crear cuenta</button>
 
         <p class="existing-user">¿Ya tienes una cuenta?</p>
         <p class="existing-user"><a href="iniciarSesion.html">Iniciar sesión</a></p>
