--- a/suplementos-Creatina.html
+++ b/suplementos-Creatina.html
@@ -11,6 +11,14 @@
     <link rel="stylesheet" href="css/Footer.css">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
     <script src="https://kit.fontawesome.com/9e8733e006.js" crossorigin="anonymous"></script>
+
+    <script src="https://www.gstatic.com/dialogflow-console/fast/messenger/bootstrap.js?v=1"></script>
+    <df-messenger
+      intent="WELCOME"
+      chat-title="FitnessFusion"
+      agent-id="473bcc1c-0679-473f-b256-51dd99524245"
+      language-code="en"
+    ></df-messenger>
 </head>
 <body>
     <div class="modal-background"></div>
