--- a/Index.html
+++ b/Index.html
@@ -22,7 +22,13 @@
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 
 
-
+    <script src="https://www.gstatic.com/dialogflow-console/fast/messenger/bootstrap.js?v=1"></script>
+    <df-messenger
+      intent="WELCOME"
+      chat-title="FitnessFusion"
+      agent-id="473bcc1c-0679-473f-b256-51dd99524245"
+      language-code="en"
+    ></df-messenger>
 </head>
 
 <body>
